chore: upgrade to .net 8; trace logging

--- a/src/Lithnet.Pan.RAProxy.Setup/Product.wxs
+++ b/src/Lithnet.Pan.RAProxy.Setup/Product.wxs
@@ -1,54 +1,34 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<Wix xmlns="http://schemas.microsoft.com/wix/2006/wi"
-     xmlns:netfx="http://schemas.microsoft.com/wix/NetFxExtension">
-  <Product Id="*"
-           Name="Lithnet RADIUS Accounting Proxy for Palo Alto Firewall"
-           Language="1033"
-           Version="!(bind.FileVersion.fil6ae07342fce0489b90e51d06cdc17684)"
-           Manufacturer="Lithnet"
-           UpgradeCode="62b975ca3c9f4a4299c34d96834fded9">
-    <Package InstallerVersion="200" Compressed="yes" InstallScope="perMachine" Platform="x64" />
-    <Media Id="1" Cabinet="Cab1.cab" EmbedCab="yes" />
+﻿<Wix xmlns="http://wixtoolset.org/schemas/v4/wxs" xmlns:ui="http://wixtoolset.org/schemas/v4/wxs/ui">
+  <Package Name="Lithnet RADIUS Accounting Proxy for Palo Alto Firewall" Language="1033" Version="!(bind.FileVersion.fil6ae07342fce0489b90e51d06cdc17684)" Manufacturer="Lithnet" UpgradeCode="62b975ca3c9f4a4299c34d96834fded9" InstallerVersion="200"><Media Id="1" Cabinet="Cab1.cab" EmbedCab="yes" />
 
-    <MajorUpgrade Schedule="afterInstallExecute" AllowSameVersionUpgrades="yes"
-                DowngradeErrorMessage="A later version of [ProductName] is already installed" />
+    <MajorUpgrade Schedule="afterInstallExecute" AllowSameVersionUpgrades="yes" DowngradeErrorMessage="A later version of [ProductName] is already installed" />
 
-    <PropertyRef Id="WIX_IS_NETFRAMEWORK_46_OR_LATER_INSTALLED"/>
-    <Condition Message="This application requires .NET Framework 4.6. Please install the .NET Framework then run this installer again.">
-      <![CDATA[Installed OR WIX_IS_NETFRAMEWORK_46_OR_LATER_INSTALLED]]>
-    </Condition>
+    <PropertyRef Id="WIX_IS_NETFRAMEWORK_46_OR_LATER_INSTALLED" />
+    <Launch Condition="Installed OR WIX_IS_NETFRAMEWORK_46_OR_LATER_INSTALLED" Message="This application requires .NET Framework 4.6. Please install the .NET Framework then run this installer again." />
 
-    <Property Id="SERVICE_NAME" Secure="yes" Value="panraproxy"/>
+    <Property Id="SERVICE_NAME" Secure="yes" Value="panraproxy" />
 
     <Property Id="WIXUI_INSTALLDIR" Value="APPROOTDIR" />
 
-    <Directory Id="TARGETDIR" Name="SourceDir">
-      <Directory Id="ProgramFiles64Folder" >
-        <Directory Id="LITHNETROOTDIR" Name="Lithnet">
-          <Directory Id="APPROOTDIR" Name="PAN RA Proxy">
-          </Directory>
-        </Directory>
-      </Directory>
-    </Directory>
+    
 
     <UI>
-      <UIRef Id="WixUI_InstallDir" />
+      <ui:WixUI Id="WixUI_InstallDir" />
 
       <!-- Skip license dialog -->
-      <Publish Dialog="WelcomeDlg"
-               Control="Next"
-               Event="NewDialog"
-               Value="InstallDirDlg"
-               Order="2">1</Publish>
-      <Publish Dialog="InstallDirDlg"
-               Control="Back"
-               Event="NewDialog"
-               Value="WelcomeDlg"
-               Order="2">1</Publish>
+      <Publish Dialog="WelcomeDlg" Control="Next" Event="NewDialog" Value="InstallDirDlg" Order="2" />
+      <Publish Dialog="InstallDirDlg" Control="Back" Event="NewDialog" Value="WelcomeDlg" Order="2" />
     </UI>
     
     <Feature Id="RAProxy" Title="RADIUS Accounting Proxy for Palo Alto Firewall" Level="1">
       <ComponentGroupRef Id="Binaries" />
     </Feature>
-  </Product>
+  
+      <StandardDirectory Id="ProgramFiles64Folder">
+        <Directory Id="LITHNETROOTDIR" Name="Lithnet">
+          <Directory Id="APPROOTDIR" Name="PAN RA Proxy">
+          </Directory>
+        </Directory>
+      </StandardDirectory>
+    </Package>
 </Wix>
